<resources>
    <string name="app_name">E-Carer</string>
    <string name="title_activity_geofence">Map</string>
    <string name="title_activity_geofence_creator">Map</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_alarm_snooze_receiver">AlarmSnoozeReceiver</string>
    <string name="action_settings">Settings</string>
    <string name="dir_button_text">Get Directions</string>
    <string name="duration_tv_text">Duration...</string>
    <string name="distance_tv_text">Distance...</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Back">BACK</string>
    <string name="Stop">STOP</string>
    <string name="map_api_key">AIzaSyB92xEcjcFq8-Xhw1kDGspoEtiOgLxz6EY</string>
    <string name="home_message">Welcome to E-Carer! Please select one of the functions below.</string>
    <string name="med_alerts">Medication Alerts</string>
    <string name="get_home">Get Home</string>
    <string name="cloud_sync">Cloud Sync</string>
    <string name="pat_bounds">Patient Boundaries</string>
    <string name="settings">Settings</string>
    <string name="title_activity_homing_settings">Get Home Settings</string>
    <string name="dir_button_text_disabled">Get Directions (Disabled for Live Tracking)</string>

    <!-- Text associated with homing preferences -->
    <string name="homing_preferences_label">Preferences</string>
    <string name="live_tracking_preference_title">Live Tracking</string>
    <string name="live_tracking_preference_summary">Enable for live direction updates. Higher power consumption.</string>
    <string name="home_lat_preference_summary">The latitude of the home destination.</string>
    <string name="home_lat_preference_title">Home Latitude</string>
    <string name="home_lon_preference_summary">The longitude of the home destination.</string>
    <string name="home_lon_preference_title">Home Longitude</string>
    <string name="direction_mode_preference_summary">The type of directions supplied.</string>
    <string name="direction_mode_preference_title">Direction Mode</string>
    <string name="update_interval_preference_summary">The interval in seconds between direction updates when Live Tracking is enabled.</string>
    <string name="update_interval_preference_title">Update Interval</string>

</resources>
