<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/distanceTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:textAlignment="center"
            android:text="@string/distance_tv_text" />

        <TextView
            android:id="@+id/durationTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:textAlignment="center"
            android:text="@string/duration_tv_text" />


    </LinearLayout>

    <Button
        android:id="@+id/getDirButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="getDirections"
        android:text="@string/dir_button_text" />


</LinearLayout>

